<resources>
    <string name="app_name">FilmLand</string>
    <string name="upcoming">Próximos</string>
    <string name="popular_on_filmland">Popular em FilmLand</string>
    <string name="now_playing">Passando Agora</string>
    <string name="top_rated">Mais Votados</string>
    <string name="films">Filmes</string>
    <string name="series">Series</string>
    <string name="my_list">Minha Lista</string>
    <string name="airing_today">No Ar Hoje</string>
</resources>